// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config: mount basic allows direct mappings: allows direct mappings 1`] = `
Object {
  "index.js": "console.log('a');",
}
`;

exports[`config: mount basic allows ending file slash: allows ending file slash 1`] = `
Object {
  "index.js": "console.log('d');",
}
`;

exports[`config: mount basic allows renamed mappings 2: allows renamed mappings 2 1`] = `
Object {
  "index.js": "console.log('c');",
}
`;

exports[`config: mount basic allows renamed mappings 3: allows renamed mappings 3 1`] = `
Object {
  "index.js": "console.log('e/f');",
}
`;

exports[`config: mount basic allows renamed mappings: allows renamed mappings 1`] = `
Object {
  "index.js": "console.log('b');",
}
`;

exports[`config: mount basic static + resolve: static + resolve 1`] = `
Object {
  "dep.js": "console.log('dep');",
  "index.jsx.js": "// TEST NOTE: since resolve=false, expected to be broken import
import './dep';
console.log('i');
",
  "main.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
    <meta name=\\"description\\" content=\\"Web site created using create-snowpack-app\\" />
    <title>Snowpack App</title>
  </head>
  <body>
    <!-- TEST NOTE: since resolve=false, expected to be broken import -->
    <script type=\\"module\\" src=\\"%PUBLIC_URL%/_dist_/index.js\\"></script>
    <script type=\\"module\\">
        // TEST NOTE: since resolve=false, expected to be broken import
        import './dep';
        console.log('main');
    </script>
  </body>
</html>
",
}
`;
